2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline Document::documentElement(), since it is used by the (very hot) RenderObject::isRoot().  Split off
        the code that fetches and caches the document element into a separate function and inline the part that
        does the null check and the return of the already-cached element.

        Reviewed by Oliver Hunt

        * dom/Document.cpp:
        (WebCore::Document::cacheDocumentElement):
        * dom/Document.h:
        (WebCore::Document::documentElement):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Minor tweaks to RenderBox::styleChange to speed it up.

        Reviewed by Oliver Hunt

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::styleDidChange):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline FrameLoader::client().

        Reviewed by Oliver Hunt

        * WebCore.base.exp:
        * loader/FrameLoader.cpp:
        * loader/FrameLoader.h:
        (WebCore::FrameLoader::client):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline some Image methods for speed.  Fix CachedImage's addClient method to just use isNull rather
        than needlessly creating a rect.

        Reviewed by Oliver Hunt

        * loader/CachedImage.cpp:
        (WebCore::CachedImage::addClient):
        * platform/graphics/Image.cpp:
        * platform/graphics/Image.h:
        (WebCore::Image::isNull):
        (WebCore::Image::rect):
        (WebCore::Image::width):
        (WebCore::Image::height):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Avoid using the non-inlined isVariable() when adding parsed values during CSS parsing.

        Reviewed by Oliver Hunt

        * css/CSSParserValues.cpp:
        (WebCore::CSSParserValueList::addValue):

2009-01-17  David Hyatt  <hyatt@apple.com>

        Inline Document::inPageCache(), since - because of animation code - it is now called every time
        styles change on any element and so is now super-hot.
