@@ -1,5 +1,16 @@
 2009-01-17  David Hyatt  <hyatt@apple.com>
 
+        Inline a few methods in FrameView for speed.
+
+        Reviewed by Oliver Hunt
+
+        * page/FrameView.cpp:
+        * page/FrameView.h:
+        (WebCore::FrameView::layoutCount):
+        (WebCore::FrameView::needsFullRepaint):
+
+2009-01-17  David Hyatt  <hyatt@apple.com>
+
         Inline Document::documentElement(), since it is used by the (very hot) RenderObject::isRoot().  Split off
         the code that fetches and caches the document element into a separate function and inline the part that
         does the null check and the return of the already-cached element.
